--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:$arch_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$test_coroutine_version"
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_android_version"
+    kaptTest "com.google.dagger:hilt-android-compiler:$hilt_android_version"
     testImplementation "com.google.dagger:hilt-android-testing:$hilt_android_version"
     kaptTest "com.google.dagger:hilt-android-compiler:$hilt_android_version"
 
