--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,9 +2,9 @@ name: Android CI
 
 on:
   push:
-    branches: [ testing ]
+    branches: [ master ]
   pull_request:
-    branches: [ testing ]
+    branches: [ master ]
 
 jobs:
   build:
